# cargo-perf

./: .gitignore  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  action.yml  cargo-perf.schema.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  example-usage.yml.template  real-crate-scan.yml  release.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: antipatterns.rs  async_patterns.rs
docs/: accuracy.md  getting-started.md
editors/: README.md
editors/emacs/: cargo-perf.el
editors/neovim/: cargo-perf.lua
editors/vscode/: package.json
editors/vscode/src/: extension.ts
examples/: cargo-perf.toml  custom_rule.rs  github-workflow.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: analyze.rs  parse.rs
scripts/: real-crate-scan.sh
src/: baseline.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  plugin.rs  suppression.rs
src/engine/: context.rs  file_analyzer.rs  mod.rs  parser.rs
src/fix/: mod.rs
src/lsp/: mod.rs
src/reporter/: console.rs  json.rs  mod.rs  sarif.rs
src/rules/: allocation_rules.rs  async_rules.rs  database_rules.rs  iter_rules.rs  lock_across_await.rs  memory_rules.rs  mod.rs  registry.rs  resolve.rs  visitor.rs
tests/: accuracy.rs  cli.rs  integration.rs
tests/corpus/: neg_arc_clone_in_loop.rs  neg_arc_factory_clone.rs  neg_arc_field_clone.rs  neg_arc_handle_method_clone.rs  neg_async_io_read_across_await.rs  neg_atomic_load_in_loop.rs  neg_await_no_lock.rs  neg_blocking_in_sync_closure.rs  neg_bounded_channel.rs  neg_clone_outside_loop.rs  neg_collect_then_len.rs  neg_copy_array_literal_loop.rs  neg_copy_by_ref_loop.rs  neg_copy_clone_loop_var.rs  neg_copy_literal_suffix.rs  neg_custom_connect_bind.rs  neg_custom_load_in_loop.rs  neg_custom_output_method.rs  neg_custom_read_nullary_in_loop.rs  neg_dispatch_table_execute.rs  neg_domain_collect_iter.rs  neg_fluent_into_execute.rs  neg_format_outside_loop.rs  neg_guard_dropped_before_await.rs  neg_hashmap_insert_ref_conn.rs  neg_hashmap_shadow_with_capacity.rs  neg_hashmap_with_capacity.rs  neg_io_read_in_loop.rs  neg_io_write_in_loop.rs  neg_iterator_filter_first.rs  neg_local_vec_users_first.rs  neg_mutex_sibling_scope.rs  neg_regex_cache_key.rs  neg_regex_outside_loop.rs  neg_spawn_outside_loop.rs  neg_string_concat_outside_loop.rs  neg_string_shadow_with_capacity.rs  neg_string_with_capacity.rs  neg_sync_fn_mutex.rs  neg_sync_io_write_across_await.rs  (+40 more)
tests/corpus/known_gaps/: gap_arc_associated_factory_clone.rs  gap_clone_in_iterator_closure.rs  gap_inline_blocking_sync_closure.rs  gap_mutex_in_lazy_iterator_adapter.rs  gap_ufcs_arc_field_clone.rs
tests/fixtures/: bad_code.rs
