[package]
name = "cargo-perf"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"  # Required for LazyLock
description = "Preventive performance analysis for Rust - catch anti-patterns before production"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/cargo-perf"
keywords = ["performance", "lint", "static-analysis", "cargo-plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-perf"
path = "src/main.rs"

[lib]
name = "cargo_perf"
path = "src/lib.rs"

[dependencies]
# Parsing
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Output
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Utilities
walkdir = "2"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
