[package]
name = "cargo-perf"
version = "0.5.6"
edition = "2021"
rust-version = "1.80"  # Required for LazyLock
description = "Preventive performance analysis for Rust - catch anti-patterns before production"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cschuman/cargo-perf"
keywords = ["performance", "lint", "static-analysis", "cargo-plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-perf"
path = "src/main.rs"

[lib]
name = "cargo_perf"
path = "src/lib.rs"

[dependencies]
# Parsing
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Output
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.9"

# Utilities
walkdir = "2"
thiserror = "2"
anyhow = "1"
rayon = "1"
tempfile = "3"

# LSP (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"], optional = true }

[features]
default = ["cli"]
cli = []  # CLI integration (clap ValueEnum impl)
lsp = ["tower-lsp", "tokio"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
