[package]
name = "cargo-perf"
version = "0.6.0"
edition = "2021"
rust-version = "1.85"  # Required by transitive deps (clap_lex >=1.1) using edition2024
description = "Preventive performance analysis for Rust - catch anti-patterns before production"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cschuman/cargo-perf"
keywords = ["performance", "lint", "static-analysis", "cargo-plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]
# The fuzz harness is a separate nightly-only crate; keep it out of the
# published package so `cargo publish --verify` never tries to build it.
exclude = ["/fuzz"]

# `cargo binstall cargo-perf` fetches the prebuilt binary from GitHub Releases
# instead of compiling from source. The templates below match the asset names
# produced by .github/workflows/release.yml, which uploads a flat archive
# (`cargo-perf-<target>.tar.gz`, or `.zip` on Windows) containing just the
# `cargo-perf` binary, under a `v<version>` tag.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/cargo-perf-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "cargo-perf"
path = "src/main.rs"

[lib]
name = "cargo_perf"
path = "src/lib.rs"

[dependencies]
# Parsing
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Output
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "1.1"

# Utilities
walkdir = "2"
thiserror = "2"
anyhow = "1"
rayon = "1"
tempfile = "3"

# LSP (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"], optional = true }

[features]
default = ["cli"]
cli = []  # CLI integration (clap ValueEnum impl)
lsp = ["tower-lsp", "tokio"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
