[package]
name = "cargo-perf-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
regex = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
futures = "0.3"

[[bench]]
name = "antipatterns"
harness = false

[[bench]]
name = "async_patterns"
harness = false
